@@ -207,4 +207,17 @@ public class Test {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description>bug #1005 False + for ConstructorCallsOverridableMethod - overloaded methods</description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Foo {
+ public Foo() {
+  bar(true);
+ }
+ public final void bar(boolean b) {}
+ public void bar(String o) {}
+}
+        ]]></code>
+    </test-code>
 </test-data>
