@@ -15,6 +15,7 @@ New Java rule:
 ????? ??, 2013 - 5.0.3:
 
 Fixed bug 1002: False +: FinalFieldCouldBeStatic on inner class
+Fixed bug 1005: False + for ConstructorCallsOverridableMethod - overloaded methods
 Fixed bug 1064: Exception running PrematureDeclaration
 Fixed bug 1068: CPD fails on broken symbolic links
 Fixed bug 1073: Hard coded violation messages CommentSize
